force-app/main/default/objects/Platform_Unit_of_Work_Event__e/Platform_Unit_of_Work_Event__e.object-meta.xml
<CustomObject>
    <label>Platform Unit of Work Event</label>
    <pluralLabel>Platform Unit of Work Events</pluralLabel>
</CustomObject>