force-app/main/default/objects/Platform_Unit_of_Work_Event__e/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>