force-app/main/default/objects/Platform_Unit_of_Work_Event__e/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>