force-app/main/default/objects/Platform_Unit_of_Work_Event__e/fields/UOW_Id__c.field-meta.xml
<CustomField>
    <fullName>UOW_Id__c</fullName>
    <label>UOW Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>