force-app/main/default/objects/Platform_Unit_of_Work_Event__e/fields/UOW_Processor__c.field-meta.xml
<CustomField>
    <fullName>UOW_Processor__c</fullName>
    <label>UOW Processor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>